--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,4 +1,4 @@
-name: AI Code Reviewer
+name: GPTcode-reviewer
 
 on:
   pull_request:
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: AI Code Reviewer
-        uses: freeedcom/ai-codereviewer@v2.7.0
+      - name: GPTcode-reviewer
+        uses: PierreGode/GPTcode-reviewer@main
         with:
           GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_API_MODEL: "gpt-4-turbo-2024-04-09" # Optional: defaults to "gpt-4"
+          OPENAI_API_MODEL: "gpt-4o-mini" # Optional: defaults to "gpt-4"
           exclude: "**/*.json, **/*.md" # Optional: exclude patterns separated by commas
